<resources>
    <string name="app_name">Radio_wakeupARC</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_set_alarm">Set Radio Alarm</string>
    <string name="button_stop_radio">Stop Radio Alarm</string>
    <string name="top_label_welcome">Please Select the date and Time</string>
    <string name="top_label_welcome2">you want the radio station to start at:</string>
    <string name="setDateLabel">Date:</string>
    <string name="setTimeLabel">Time:</string>
    <string name="title_activity_search_radio_station">SearchRadioStationActivity</string>
    <string name="openRadioSearch">Search and set Radio Station</string>
    <string name="searchStation">Search</string>
    <string name="searchRadioText">name</string>
    <string name="hintSearchStation">Please type the name of the Radio Station</string>
    <string name="developedBy">Developed by: @aliriorivera</string>
    <string name="defaultStationSelected">This Radio Station will be played: </string>
    <string name="noDefaultRadioSelected">You have no selected any Radio Station!!</string>
    <string name="radioStationName">Name:</string>
    <string name="radioStationCountry">Country:</string>
    <string name="radioStationTags">Tags:</string>
    <string name="voidRadioStationSet"></string>
</resources>